--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.3.3",
+    "@sanity/base": "^2.3.5",
     "@sanity/components": "^2.2.6",
     "@sanity/core": "^2.3.3",
-    "@sanity/default-layout": "^2.3.3",
+    "@sanity/default-layout": "^2.3.5",
     "@sanity/default-login": "^2.2.6",
-    "@sanity/desk-tool": "^2.3.3",
+    "@sanity/desk-tool": "^2.3.5",
     "@sanity/production-preview": "^2.2.6",
     "@sanity/vision": "^2.2.6",
     "prop-types": "^15.6",
     "react": "^16.2",
-    "react-dom": "^16.2"
+    "react-dom": "^16.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {}
 }
